[gd_scene load_steps=15 format=3 uid="uid://dc2epskdddoys"]

[ext_resource type="Script" path="res://Assets/Textures/Animation/Player/Player.gd" id="1_rgexs"]
[ext_resource type="Texture2D" uid="uid://boxg68gxu5if6" path="res://Assets/Textures/Animation/Player/PlayerAnim/Character Idle 48x48.png" id="2_yenmy"]
[ext_resource type="Script" path="res://Scripts/MainCamera.gd" id="3_y1qcw"]
[ext_resource type="Texture2D" uid="uid://d2dew8hlcr6h1" path="res://Assets/Textures/Animation/Player/PlayerAnim/player jump 48x48.png" id="4_x5ujh"]
[ext_resource type="Texture2D" uid="uid://c04tee34pcmbn" path="res://Assets/Textures/Animation/Player/PlayerAnim/run cycle 48x48.png" id="5_swewj"]
[ext_resource type="Texture2D" uid="uid://tmdg31oaxsi1" path="res://Assets/Textures/Animation/Player/PlayerAnim/player land 48x48.png" id="6_8bb4c"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qwji5"]
height = 34.0

[sub_resource type="Animation" id="Animation_4607s"]
resource_name = "PlayerCorrer"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_swewj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_6df13"]
resource_name = "PlayerOcioso"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_yenmy")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_gxh8l"]
resource_name = "PlayerPulo"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_x5ujh")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_ha52x"]
resource_name = "PlayerPuloAterrizar"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_8bb4c")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_vo6kc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_yenmy")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dxo08"]
_data = {
"PlayerCorrer": SubResource("Animation_4607s"),
"PlayerOcioso": SubResource("Animation_6df13"),
"PlayerPulo": SubResource("Animation_gxh8l"),
"PlayerPuloAterrizar": SubResource("Animation_ha52x"),
"RESET": SubResource("Animation_vo6kc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gshqs"]
size = Vector2(21, 22)

[node name="Player" type="CharacterBody2D"]
position = Vector2(347, 220)
collision_mask = 6
script = ExtResource("1_rgexs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_qwji5")
one_way_collision_margin = 0.0
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="PlayerSprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_yenmy")
hframes = 10

[node name="CayTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dxo08")
}

[node name="CameraPlayerSnappy2" type="Camera2D" parent="."]
ignore_rotation = false
limit_left = 0
limit_top = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("3_y1qcw")

[node name="CheckChaoRaycasts" type="Node" parent="."]

[node name="RayCast" type="RayCast2D" parent="CheckChaoRaycasts"]
position = Vector2(357, 227)
target_position = Vector2(0, 25)

[node name="RayCast2" type="RayCast2D" parent="CheckChaoRaycasts"]
position = Vector2(337, 227)
target_position = Vector2(0, 25)

[node name="Raydireita" type="RayCast2D" parent="."]
position = Vector2(10, 0)
target_position = Vector2(4, 0)
collision_mask = 8

[node name="Rayesquerda" type="RayCast2D" parent="."]
position = Vector2(-10, 0)
target_position = Vector2(-4, 0)
collision_mask = 8

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_gshqs")
debug_color = Color(0, 0, 0, 0.419608)

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="CayTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
